2008-11-24 svu

	* NEWS: preparing 3.8

2008-11-17 svu

	* configure.in: bumping versions (package and dll interface)

2008-11-16 svu

	* configure.in, libxklavier/Makefile.am: updating the build process,
	adding XInput dependency
	* libxklavier/xkl_engine.h, libxklavier/xklavier.c,
	libxklavier/xklavier_evt_xkb.c, libxklavier/xklavier_xkb.c,
	libxklavier/xklavier_private_xkb.h: using XInput for device discovery

2008-09-28 svu

	* libxklavier/xklavier_config_xkb.c,
	libxklavier/xklavier_private_xkb.h, libxklavier/xklavier_xkb.c:
	introducing device_id (for a moment - the core one, hardcoded)

2008-09-05 svu

	* NEWS, configure.in: preparing 3.7

2008-09-03 svu

	* libxklavier/xklavier_config.c: enforcing UTF-8 output of gettext,
	http://bugzilla.gnome.org/show_bug.cgi?id=529773

2008-06-17 svu

	* configure.in: fixing glib version requirement,
	http://bugs.freedesktop.org/show_bug.cgi?id=16207

2008-06-09 svu

	* libxklavier/xklavier_config_iso.c: take languages from variants into
	account

2008-04-27 svu

	* libxklavier/xkl_config_item.h, libxklavier/xkl_config_registry.h,
	doc/reference: a bit of cleanup for gtkdoc
	* NEWS: preparing 3.6
	* libxklavier/xklavier_config_iso.c, libxklavier/xklavier_config.c,
	libxklavier/xklavier_config_xkb.c, libxklavier/xklavier_util.c,
	libxklavier/xklavier_xmm.c: C99 fixes

2008-04-26 svu

	* libxklavier/xklavier_config_iso.c: another lost xpath, better
	handling of lowercase

2008-04-25 svu

	* libxklavier/xklavier_config_iso.c: lost xpath
	* tests/test_config.c: a bit of polish

2008-04-23 svu

	* libxklavier/xkl_config_registry.h, libxklavier/xklavier_config.c,
	libxklavier/xklavier_config_iso.c, libxklavier/xklavier_private.h,
	tests/test_config.c: finished ISO browsing functionality

2008-04-21 svu

	* configure.in, libxklavier/Makefile.am,
	libxklavier/xkl_config_registry.h, libxklavier/xklavier_config.c,
	libxklavier/xklavier_config_iso.c, libxklavier/xklavier_private.h,